[project]
name = "mdv"
version = "0.0.3"
description = "Multi-Dimension Viewer"
authors = [
    {name = "Shenhan Qian", email = "shenhan.qian@tum.de"}
]
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "dearpygui",
    "tyro",
    "numpy",
    "pillow",
    "opencv-python",
    "pyrender@git+https://github.com/ShenhanQian/pyrender@support-numpy-2",
    "h5py",
]
[project.scripts]
mdv = "mdv:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mdv/**",
]

[tool.hatch.metadata]
allow-direct-references = true
